--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,8 +2,9 @@ name: run-tests
 on: [push]
 jobs:
   test-utils:
-   runs-on: ubuntu-latest
-   steps:
+    name: 2022 utils tests
+    runs-on: ubuntu-latest
+    steps:
       - name: Setup Deno
         uses: denoland/setup-deno@v1.1.1
       - name: Run 2022 utils tests
